@@ -1,5 +1,6 @@
 TBC - 0.48.0
 - [NEW] - Rig Widget - tuning rig with mouse (issue #855)
+- [NEW] - Awards - Added User Filter Combo (issue #870)
 - [CHANGED] - Omnirig Drivers: Removed QT AXContainers - pure Windows API code
 - [CHANGED] - Enabled Chekbox in Alerts Table (issue #867)
 - [CHANGED] - Serial Port Completer contains Horizontal ScrollBar
